nav bar banner responsive complete

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             Embark on a voyage of a lifetime with RR Travel, where every
             destination is a canvas waiting for your adventures. Whether you
             crave the thrill of exotic landscapes, the tranquility of serene
-            beaches, or the cultural richness of historical treasures, we curate
-            journeys that go beyond expectations.
+            beaches,we curate journeys that go beyond expectations.
           </p>
           <div class="input">
             <input class="input-text" type="text" placeholder="Where go" />
