offer section done

--- a/index.html
+++ b/index.html
@@ -114,53 +114,152 @@
         </div>
       </section>
       <section class="choose">
-          <h1>Choose Your Destination</h1>
-          <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
-          <div class="gallary">
-            <div class="img-1">
-              <img src="Images/1.png" alt="">
-                <div class="img-text">
-                   <h1>Maldives</h1>
-                </div>
+        <h1>Choose Your Destination</h1>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="gallary">
+          <div class="img-1">
+            <img src="Images/1.png" alt="" />
+            <div class="img-text">
+              <h1>Maldives</h1>
             </div>
-            <div class="img-2">
-              <img src="Images/2.png" alt="">
-                <div class="img-text">
-                   <h1>Indonesia</h1>
-                </div>
-            </div>
-            <div class="img-3">
-              <img src="Images/3.png" alt="">
-                <div class="img-text">
-                   <h1>Srilanka</h1>
-                </div>
-            </div>
-            <div class="img-4">
-              <img src="Images/4.png" alt="">
-                <div class="img-text">
-                   <h1>North America</h1>
-                </div>
-            </div>
-            <div class="img-5">
-              <img src="Images/5.png" alt="">
-                <div class="img-text">
-                   <h1>Kashmir</h1>
-                </div>
-            </div>
-            <div class="img-6">
-              <img src="Images/6.png" alt="">
-                <div class="img-text">
-                   <h1>Bangladesh</h1>
-                </div>
-            </div>
-            <div class="img-7">
-              <img src="Images/7.png" alt="">
-                <div class="img-text">
-                   <h1>Bandarban</h1>
-                </div>
-            </div>
-
           </div>
+          <div class="img-2">
+            <img src="Images/2.png" alt="" />
+            <div class="img-text">
+              <h1>Indonesia</h1>
+            </div>
+          </div>
+          <div class="img-3">
+            <img src="Images/3.png" alt="" />
+            <div class="img-text">
+              <h1>Srilanka</h1>
+            </div>
+          </div>
+          <div class="img-4">
+            <img src="Images/4.png" alt="" />
+            <div class="img-text">
+              <h1>North America</h1>
+            </div>
+          </div>
+          <div class="img-5">
+            <img src="Images/5.png" alt="" />
+            <div class="img-text">
+              <h1>Kashmir</h1>
+            </div>
+          </div>
+          <div class="img-6">
+            <img src="Images/6.png" alt="" />
+            <div class="img-text">
+              <h1>Bangladesh</h1>
+            </div>
+          </div>
+          <div class="img-7">
+            <img src="Images/7.png" alt="" />
+            <div class="img-text">
+              <h1>Bandarban</h1>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="why-choose-us-container">
+        <h1>Why Choose Us</h1>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="why-choose-us">
+          <div class="hotel">
+            <img src="Images/hotel 1.png" alt="" />
+            <h2>Handpicked Hotels</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="service">
+            <img src="Images/map 1.png" alt="" />
+            <h2>World Class Service</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="price">
+            <img src="Images/price-tag 1.png" alt="" />
+            <h2>Best Price Guarantee</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="discount">
+        <h1>Deals & Discounts</h1>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="discount-1">
+          <div class="discount-1-body">
+            <div class="ditals">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-users"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> location</p>
+            </div>
+            <h2>Tour To Satorini</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="price">Price: $1300-$1500</p>
+            <button class="pry-button">Book now</button>
+          </div>
+        </div>
+        <div class="discount-2">
+          <div class="discount-2-body">
+            <div class="ditals">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-users"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> location</p>
+            </div>
+            <h2>Tour To Satorini</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="price">Price: $1300-$1500</p>
+            <button class="pry-button">Book now</button>
+          </div>
+        </div>
+        <div class="discount-3">
+          <div class="discount-3-body">
+            <div class="ditals">
+              <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
+              <p><i class="fa-solid fa-users"></i> Max : 10</p>
+              <p><i class="fa-solid fa-location-dot"></i> location</p>
+            </div>
+            <h2>Tour To Satorini</h2>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing.
+            </p>
+            <p class="price">Price: $1300-$1500</p>
+            <button class="pry-button">Book now</button>
+          </div>
+        </div>
+        <div class="button">
+          <button class="pry-button">See All Package</button>
+        </div>
       </section>
       
     </main>
