--- a/index.html
+++ b/index.html
@@ -167,35 +167,42 @@
       <section class="why-choose-us-container">
         <h1>Why Choose Us</h1>
         <p>
-          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-          odio sit massa. Sodales dictumst nec nibh pellentesque.
+          At RR Travel, we pride ourselves on offering a comprehensive range of
+          services designed to make your travel experience seamless, memorable,
+          and truly exceptional
         </p>
         <div class="why-choose-us">
           <div class="hotel">
             <img src="Images/hotel 1.png" alt="" />
             <h2>Handpicked Hotels</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              At RR Travel, we understand that where you stay shapes your travel
+              experience. That's why we go above and beyond to curate a
+              collection of handpicked hotels that redefine hospitality. Our
+              commitment is to offer you not just accommodation but a
+              personalized, exceptional, and memorable stay.
             </p>
           </div>
           <div class="service">
             <img src="Images/map 1.png" alt="" />
             <h2>World Class Service</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              At RR Travel, we are dedicated to providing a comprehensive range
+              of services designed to make your journey seamless, enjoyable, and
+              memorable. Our commitment to excellence ensures that every aspect
+              of your travel experience is carefully curated, from planning to
+              execution.
             </p>
           </div>
           <div class="price">
             <img src="Images/price-tag 1.png" alt="" />
             <h2>Best Price Guarantee</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              Traveling on a budget? RR Travel offers a range of budget-friendly
+              options without compromising on quality, ensuring everyone can
+              experience the joy of exploration. RR Travel specializes in
+              organizing seamless group and corporate travel experiences,
+              tailored to your specific needs.
             </p>
           </div>
         </div>
@@ -203,21 +210,24 @@
       <section class="discount">
         <h1>Deals & Discounts</h1>
         <p>
-          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-          odio sit massa. Sodales dictumst nec nibh pellentesque.
+          At RR Travel, we believe that extraordinary journeys should be
+          accessible to all. Enjoy special discounts and exclusive offers to
+          make your travel dreams a reality. Explore our enticing range of
+          discounts below
         </p>
         <div class="discount-1">
           <div class="discount-1-body">
             <div class="ditals">
               <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
               <p><i class="fa-solid fa-users"></i> Max : 10</p>
-              <p><i class="fa-solid fa-location-dot"></i> location</p>
+              <p><i class="fa-solid fa-location-dot"></i> Bangladesh</p>
             </div>
-            <h2>Tour To Satorini</h2>
+            <h2>Tour To Cox-Bazar</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing.
+              Discover Paradise: Cox's Bazar Escape Embark on a journey to Cox's
+              Bazar, a destination renowned for its pristine beaches, vibrant
+              culture, and captivating landscapes. Join us for an unforgettable
+              adventure that combines relaxation with exploration.
             </p>
             <p class="price">Price: $1300-$1500</p>
             <button class="pry-button">Book now</button>
@@ -228,15 +238,13 @@
             <div class="ditals">
               <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
               <p><i class="fa-solid fa-users"></i> Max : 10</p>
-              <p><i class="fa-solid fa-location-dot"></i> location</p>
+              <p><i class="fa-solid fa-location-dot"></i> Dhubai</p>
             </div>
-            <h2>Tour To Satorini</h2>
+            <h2>Tour To Abu Dhab</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing.
+              Embark on an extraordinary voyage to Abu Dhabi, the jewel of the United Arab Emirates, where modern luxury meets timeless tradition. Join us for a curated experience that captures the opulence, cultural richness, and architectural marvels of this captivating city.
             </p>
-            <p class="price">Price: $1300-$1500</p>
+            <p class="price">Price: $2000-$2200</p>
             <button class="pry-button">Book now</button>
           </div>
         </div>
@@ -245,15 +253,13 @@
             <div class="ditals">
               <p><i class="fa-solid fa-clock"></i> 7 Day / 6 Night</p>
               <p><i class="fa-solid fa-users"></i> Max : 10</p>
-              <p><i class="fa-solid fa-location-dot"></i> location</p>
+              <p><i class="fa-solid fa-location-dot"></i> Bangkok</p>
             </div>
-            <h2>Tour To Satorini</h2>
+            <h2>Tour To Bangkok</h2>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing.
+              Embark on a thrilling journey to Bangkok, where vibrant street life, ancient temples, and modern marvels create a dynamic tapestry of Thai culture. Join us for an unforgettable adventure that captures the heart and soul of this bustling metropolis.
             </p>
-            <p class="price">Price: $1300-$1500</p>
+            <p class="price">Price: $1500-$1700</p>
             <button class="pry-button">Book now</button>
           </div>
         </div>
@@ -261,7 +267,31 @@
           <button class="pry-button">See All Package</button>
         </div>
       </section>
-      
+      <section class="p-place">
+        <div class="p-ls">
+          <h2>A Simple Perfect Place To Get Lost</h2>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+          </p>
+          <ul>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+            <li>
+              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
+              porta lacus. Lectus suspendisse nullam.
+            </li>
+          </ul>
+          <button class="pry-button">See More</button>
+        </div>
+        <div class="p-rs">
+           <div class="vedio">
+             <video controls width="100%"  src="video/BANGLADESH _ Raw Beauty.mp4"></video>
+           </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
