--- a/index.html
+++ b/index.html
@@ -242,7 +242,11 @@
             </div>
             <h2>Tour To Abu Dhab</h2>
             <p>
-              Embark on an extraordinary voyage to Abu Dhabi, the jewel of the United Arab Emirates, where modern luxury meets timeless tradition. Join us for a curated experience that captures the opulence, cultural richness, and architectural marvels of this captivating city.
+              Embark on an extraordinary voyage to Abu Dhabi, the jewel of the
+              United Arab Emirates, where modern luxury meets timeless
+              tradition. Join us for a curated experience that captures the
+              opulence, cultural richness, and architectural marvels of this
+              captivating city.
             </p>
             <p class="price">Price: $2000-$2200</p>
             <button class="pry-button">Book now</button>
@@ -257,7 +261,10 @@
             </div>
             <h2>Tour To Bangkok</h2>
             <p>
-              Embark on a thrilling journey to Bangkok, where vibrant street life, ancient temples, and modern marvels create a dynamic tapestry of Thai culture. Join us for an unforgettable adventure that captures the heart and soul of this bustling metropolis.
+              Embark on a thrilling journey to Bangkok, where vibrant street
+              life, ancient temples, and modern marvels create a dynamic
+              tapestry of Thai culture. Join us for an unforgettable adventure
+              that captures the heart and soul of this bustling metropolis.
             </p>
             <p class="price">Price: $1500-$1700</p>
             <button class="pry-button">Book now</button>
@@ -287,12 +294,56 @@
           <button class="pry-button">See More</button>
         </div>
         <div class="p-rs">
-           <div class="vedio">
-             <video controls width="100%"  src="video/BANGLADESH _ Raw Beauty.mp4"></video>
-           </div>
+          <div class="vedio">
+            <video
+              controls
+              width="100%"
+              src="video/BANGLADESH _ Raw Beauty.mp4"
+            ></video>
+          </div>
+        </div>
+      </section>
+      <section class="new-letter">
+        <div class="n-ls">
+          <h2>Newsletter</h2>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <div class="i">
+            <input class="text" type="text" placeholder="Enter your name" />
+            <input class="text" type="email" placeholder="Enter your email" />
+          </div>
+          <button class="pry-button">Subscribe</button>
+        </div>
+        <div class="n-rs">
+          <div class="n-img">
+            <img src="Images/Rectangle 8 (1).png" alt="" />
+            <div class="n-img-banner">
+              <p>RR Travel.com</p>
+              <h2>Save up to 70%</h2>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="fotter-container">
+        <div class="nav-ls">
+          <img src="Images/logo.png" alt="" />
+          <h1 id="RR">RR</h1>
+          <h1 id="Travel">Travel</h1>
+        </div>
+        <p>
+          RR Travel is your trusted companion in exploring the world. We
+          specialize in crafting unforgettable travel experiences for every
+          adventurer.
+        </p>
+        <div class="socail-media">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href=""><i class="fa-brands fa-twitter"></i></a>
+          <a href=""> <i class="fa-solid fa-envelope"></i></a>
+        </div>
+        <p>2017, All Rights Reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
