update copy right

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <a href=""><i class="fa-brands fa-twitter"></i></a>
           <a href=""> <i class="fa-solid fa-envelope"></i></a>
         </div>
-        <p>2017, All Rights Reserved.</p>
+        <p> &#169 RM 2024.Developed by MD. A. Rahad Mondal </p>
       </div>
     </footer>
   </body>
